chore: add input component

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "parcel": "^2.6.0"
   },
   "dependencies": {
+    "nanoid": "^4.0.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   }
