--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "nanoid": "^4.0.0",
+    "pinia": "^2.0.14",
     "process": "^0.11.10",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
